--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,11 @@
   }
 }
 
+body {
+  color: var(--foreground);
+  background: var(--background);
+}
+
 @layer base {
   html {
     scroll-behavior: smooth;
